--- a/index.html
+++ b/index.html
@@ -77,11 +77,6 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>A final year student currently pursuing Bachelor's Degree in Computer Science. Working in a
-            manufacturing company and seeking an opportunity for continues learning to expand knowledge, gain
-            new skills and expertise in working. An intuitive who interested in learning ERP systems & business
-            process systems. Like to learn new things in Technology especially analysis systems to make
-            improvements & make users more effeective and efficient.</p>
         </div>
 
         <div class="row">
@@ -235,7 +230,6 @@
 
         <div class="section-title">
           <h2>Resume</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
         </div>
 
         <div class="row">
@@ -243,11 +237,15 @@
             <h3 class="resume-title">Sumary</h3>
             <div class="resume-item pb-0">
               <h4>Yohana Briliant Christanti</h4>
-              <p><em>Innovative and deadline-driven Graphic Designer with 3+ years of experience designing and developing user-centered digital/print marketing material from initial concept to final, polished deliverable.</em></p>
+              <p><em>A final year student currently pursuing Bachelor's Degree in Computer Science. Working in a
+                manufacturing company and seeking an opportunity for continues learning to expand knowledge, gain
+                new skills and expertise in working. An intuitive who interested in learning ERP systems & business
+                process systems. Like to learn new things in Technology especially analysis systems to make
+                improvements & make users more effeective and efficient.</em></p>
               <ul>
-                <li>Portland par 127,Orlando, FL</li>
-                <li>(123) 456-7891</li>
-                <li>alice.barkley@example.com</li>
+                <li>President University</li>
+                <li>Information System & Business Management</li>
+                <li>GPA 3.73 (Semester 8)</li>
               </ul>
             </div>
 
@@ -268,25 +266,39 @@
           <div class="col-lg-6">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
-              <h4>Senior graphic design specialist</h4>
-              <h5>2019 - Present</h5>
-              <p><em>Experion, New York, NY </em></p>
+              <h4>IT System Development Staff (User Interaction)</h4>
+              <h5>2020 - Present</h5>
+              <p><em>PT. Trimitra Chitrahasta, Cikarang, Bekasi</em></p>
               <ul>
-                <li>Lead in the design, development, and implementation of the graphic, layout, and production communication materials</li>
-                <li>Delegate tasks to the 7 members of the design team and provide counsel on all aspects of the project. </li>
-                <li>Supervise the assessment of all graphic materials in order to ensure quality and accuracy of the design</li>
-                <li>Oversee the efficient use of production project budgets ranging from $2,000 - $25,000</li>
+                <li>Analyze problem system ERP (web & desktop based ) internal all department</li>
+                <li>Responsible for project requirement customer for improvement & efficiency production</li>
+                <li>Create & Monitoring Project Milestone for internal</li>
+                <li>Regression Testing & Implementation new software programs</li>
+                <li>Training & follow up user for trial new modul</li>
+                <li>Responding in a timely manner to service issues and requests</li>
               </ul>
             </div>
             <div class="resume-item">
-              <h4>Graphic design specialist</h4>
-              <h5>2017 - 2018</h5>
-              <p><em>Stepping Stone Advertising, New York, NY</em></p>
+              <h4>Marketing Staff (Customer Relation Support)</h4>
+              <h5>2017 - 2020</h5>
+              <p><em>PT. Trimitra Chitrahasta, Cikarang, Bekasi</em></p>
               <ul>
-                <li>Developed numerous marketing programs (logos, brochures,infographics, presentations, and advertisements).</li>
-                <li>Managed up to 5 projects or tasks at a given time while under pressure</li>
-                <li>Recommended and consulted with clients on the most appropriate graphic design</li>
-                <li>Created 4+ design presentations and proposals a month for clients and account managers</li>
+                <li>Build a good relationship with the customer ( ATPM & Non-ATPM )</li>
+                <li>Handle Order Production (Schedule, Forecast & Purchase Order)</li>
+                <li>Analyze monthly & annual sales</li>
+                <li>Responsible for price adjustment customer</li>
+                <li>Follow up quotation project, vendor progress & internal production</li>
+              </ul>
+            </div>
+            <div class="resume-item">
+              <h4>Staff Warehouse</h4>
+              <h5>2015 - 2017</h5>
+              <p><em>PT. Sinar Gaya Busana, Cibitung, Bekasi</em></p>
+              <ul>
+                <li>Organized imported good received 􀉿Fabric, Thread & Accecories)</li>
+                <li>Follow up and control all transaction fabric and accecories in warehouse for production line</li>
+                <li>Make daily report, monthly report for Manager</li>
+                <li>Follow up, report and claim the reject material that is returned to buyer in Korea</li>
               </ul>
             </div>
           </div>
