--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
         <div class="row">
           <div class="col-lg-4">
-            <img src="assets/img/yohana-profile.jpeg" class="img-fluid" alt="Avatar">
+            <img src="assets/img/yohana-profpic.jpeg" class="img-fluid" alt="Avatar">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content">
             <h3>System Development</h3>
@@ -709,7 +709,7 @@
   <!-- ======= Footer ======= -->
   <footer id="footer">
     <div class="container">
-      <h3>Thank You ❤️</h3>
+      <h3>Thank You</h3>
       <p>Thank you for visiting my personal website</p>
       <!--
       <div class="social-links">
@@ -728,7 +728,7 @@
         <!-- You can delete the links only if you purchased the pro version. -->
         <!-- Licensing information: [license-url] -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/free-html-bootstrap-template-my-resume/ -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+        <!-- Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a> -->
       </div>
     </div>
   </footer><!-- End Footer -->
